3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

socket/loop.c: Fix replyinfo, in that it was using incorrect length parameter
  when replying to unsupported requests.
MSW 2006-11-02

Fix for bug #1547517: DM issue with containers
server/apply.c: move_apply shouldn't exit if opened container.
Ryo 2006-10-29

Update code so everything uses draw_ext_info(), and remove new_draw_info().
For the most part, everything is just a simple update of function name/
parameters.  In some places, there was some other cleanup, like
inconsistent whitespace being made consistent.  A few places were
changed to use the varargs version, so no longer needed a local snprintf.
Many places where used to remove the hard formatting (combine several
calls into one so that the client can do the word wrap/formatting, since
assuming the width of the client never was really accurate)
Dead code was removed, rather than being updated.
For old clients, it will continue to use the old protocol commands, so
this doesn't break client compatibility in any way.
--
Files affected:
common/arch.c, common/button.c, common/living.c, common/los.c. common/map.c,
common/quest.cm common/time.c, common/treasure.c
crossedit/stubs.c
random_maps/standalone.c
include/funcpoint.h, include/newclient.h, include/sockproto.h
server/alchemy.c, server/apply.c, server/attack.c, server/build_map.c,
server/c_chat.c, server/c_wiz.c, server/c_new.c, server/c_object.c,
server/c_range.c, server/c_party.c, server/commands.c, server/disease.c,
server/gods.c, server/hiscore.c, server/login.c, server/monster.c,
server/move.c, server/pets.c, server/player.c, server/plugins.c